flux/overlays/stage/frontend/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'false'
    spec:
      containers:
      - name: go
        image: 937351930975.dkr.ecr.us-west-2.amazonaws.com/k8s-frontend:noxray # {"$imagepolicy": "flux-system:app-image-stage-policy"}
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
