flux/overlays/stage/frontend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-frontend
spec:
  ingressClassName: kong
  rules:
    - host: storefront.caas-poc-127.msbx.spratingsvpc.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
